fix: Add pairs to service.toml

--- a/service.toml
+++ b/service.toml
@@ -1,7 +1,7 @@
 name = "ftp"
 
 [namespace.storage]
-optional = ["credential"]
+optional = ["credential","work_dir","name"]
 
 [namespace.storage.op.create]
 optional = ["object_mode"]
@@ -10,7 +10,7 @@ optional = ["object_mode"]
 optional = ["object_mode"]
 
 [namespace.storage.op.list]
-optional = ["list_mode"]
+optional = ["list_mode","continuation_token"]
 
 [namespace.storage.op.read]
 optional = ["offset", "io_callback", "size"]
