feat: Implement go-storage.Storager (#13)
* update: util.go and go.mod

* update(storage.go): add create and delete

* update(storager.go): read and write implemented

* update(storage.go): all functions implemented

* Update .gitignore

* Revert "Update .gitignore"

This reverts commit e8d82eb3c0c98519f5ee8626c1c31129106f5f3a.

* Update .gitignore

* Update utils.go

* feat(utils.go): implement formatError

* feat: add Makefile.env.example

* fix: Add if-errs

* fix: Remove redundant blank lines

* fix: Add pairs to service.toml

* fix: remove redundant calls

* fix: remove redeclared package

* fix: Storager.list

* fix: Storager.list

* update(service.toml)

* feat: implement integration test

* feat: Add rfc example

* update: Close #6

* update: Replace name with endpoint

* fix: bug fix and code simplify

* update: Simplify test

* fix: Add more error handler

* fix: use idempotent delete and pass the integration test

* Update utils.go

* feat: continuationToken

* fix: Remove unused code

- Remove unused code
- Change HTTP to TCP
- Change import format

* fix: File separater

--- a/service.toml
+++ b/service.toml
@@ -1,6 +1,7 @@
 name = "ftp"
 
-[namespace.storage]
+[namespace.storage.new]
+optional = ["endpoint","work_dir","credential"]
 
 [namespace.storage.op.create]
 optional = ["object_mode"]
@@ -9,7 +10,7 @@ optional = ["object_mode"]
 optional = ["object_mode"]
 
 [namespace.storage.op.list]
-optional = ["list_mode"]
+optional = ["list_mode","continuation_token"]
 
 [namespace.storage.op.read]
 optional = ["offset", "io_callback", "size"]
