--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -27,7 +27,7 @@ jobs:
           
       - name: Prepare config file
         run: |
-          touch ftpserver.json
+          touch "ftpserver.json"
           cat ftpserver.json | ftpserver.json <<- EOF
           {
             "version": 1,
