--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -65,6 +65,7 @@ jobs:
       - name: Start ftp server
         run: |
           chmod 777 ftpserver-linux-amd64
+          script /dev/null
           screen -S ftpserver ./ftpserver-linux-amd64
       
       - name: Build
