--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -65,8 +65,8 @@ jobs:
       - name: Start ftp server
         run: |
           chmod 777 ftpserver-linux-amd64
-          screen -S ftpserver ./ftpserver-linux-amd64
-          script /dev/null
+          screen -dS ftpserver ./ftpserver-linux-amd64
+ 
       
       - name: Build
         run: make build
