--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -27,52 +27,26 @@ jobs:
           repository: fclairamb/ftpserver
           tag: v0.10.0
           fileName: ftpserver-linux-amd64
-      
-      - name: Install
-        run: sudo apt install screen
-      
-      - name: Create config file
-        run: touch ftpserver.json
-        
+
       - name: Prepare config file
-        run: |
-          cat > ftpserver.json <<- EOF
-          {
-            "version": 1,
-            "accesses": [
-              {
-                "sync_and_delete": {
-                  "enable": true
-                },
-              "user": "user",
-              "pass": "password",
-              "fs": "os",
-              "params": {
-                "basePath": "./tmp"
-              }
-            }
-          ],
-          "passive_transfer_port_range": {
-            "start": 2122,
-            "end": 2130
-          }
-          }
-          EOF
-          
+        run: mv ./tests/ftpserver.json ./ftpserver.json
+
       - name: Create test dir
         run: mkdir tmp
-        
+
       - name: Start ftp server
         run: |
           chmod 777 ftpserver-linux-amd64
-          screen -dmS ftpserver ./ftpserver-linux-amd64
- 
-      
+          ./ftpserver-linux-amd64 &
+
       - name: Build
         run: make build
 
       - name: Prepare env
-        run: mv Makefile.env.example Makefile.env
+        run: |
+          export STORAGE_FTP_INTEGRATION_TEST=on
+          export STORAGE_FTP_CREDENTIAL=basic:user:password
+          export STORAGE_FTP_ENDPOINT=tcp:127.0.0.1:2121
 
       - name: Integration Test
         run: make integration_test
