--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       STORAGE_FTP_INTEGRATION_TEST: on
       STORAGE_FTP_CREDENTIAL: basic:user:password
-      STORAGE_FTP_ENDPOINT: 127.0.0.1:2121
+      STORAGE_FTP_ENDPOINT: tcp:127.0.0.1:2121
 
     strategy:
       matrix:
