--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -3,8 +3,8 @@ name: "Integration Test"
 on: [push, pull_request]
 
 jobs:
-  integration_test:
-    name: Integration Test
+  integration_test_1:
+    name: Integration Test (fclairamb/ftpserver)
     runs-on: ${{ matrix.os }}
     env:
       STORAGE_FTP_INTEGRATION_TEST: on
@@ -42,6 +42,49 @@ jobs:
         run: |
           chmod 777 ftpserver-linux-amd64
           ./ftpserver-linux-amd64 &
+
+      - name: Build
+        run: make build
+
+      - name: Integration Test
+        run: make integration_test
+
+  integration_test_2:
+    name: Integration Test (asf/mina-ftpserver)
+    runs-on: ${{ matrix.os }}
+    env:
+      STORAGE_FTP_INTEGRATION_TEST: on
+      STORAGE_FTP_CREDENTIAL: basic:admin:admin
+      STORAGE_FTP_ENDPOINT: tcp:127.0.0.1:2121
+
+    strategy:
+      matrix:
+        go: ["1.15", "1.16"]
+        java: ["8"]
+        os: [ubuntu-latest]
+
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go }}
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download apache ftpserver 
+        run: wget https://dlcdn.apache.org/mina/ftpserver/1.1.1/dist/apache-ftpserver-1.1.1.zip
+
+      - name: Unzip file
+        run: unzip apache-ftpserver-1.1.1.zip
+
+      - name: Clean ftp home
+        run: rm apache-ftpserver-1.1.1/res/home/README.txt
+
+      - name: Start ftp server
+        run: |
+          chmod 777 apache-ftpserver-1.1.1/bin/ftpd.sh
+          ./apache-ftpserver-1.1.1/bin/ftpd.sh res/conf/ftpd-typical.xml &
 
       - name: Build
         run: make build
