--- a/service.toml
+++ b/service.toml
@@ -1,7 +1,7 @@
 name = "ftp"
 
 [namespace.storage.new]
-optional = ["default_storage_pairs", "endpoint","work_dir","credential"]
+optional = ["endpoint","work_dir","credential"]
 
 [namespace.storage.op.create]
 optional = ["object_mode"]
@@ -20,7 +20,3 @@ optional = ["object_mode"]
 
 [namespace.storage.op.write]
 optional = ["content_md5", "content_type", "io_callback"]
-
-[pairs.default_storage_pairs]
-type = "DefaultStoragePairs"
-description = "set default pairs for storager actions"
